Fixed composer.json validity and remove os specific entries in the gitignore

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,5 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "dev",
-	"private": true
+	"minimum-stability": "stable"
 }
