--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,15 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
-			"php artisan optimize"
+			"php artisan optimize",
+			"npm install",
+			"bower install"
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php artisan optimize",
+			"npm update",
+			"bower update"
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
