--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "ping",
   "version": "0.1.0",
-  "description": "[![Latest Stable Version](https://poser.pugx.org/laravel/framework/version.png)](https://packagist.org/packages/laravel/framework) [![Total Downloads](https://poser.pugx.org/laravel/framework/d/total.png)](https://packagist.org/packages/laravel/framework) [![Build Status](https://travis-ci.org/laravel/framework.png)](https://travis-ci.org/laravel/framework)",
+  "description": "Website status check",
   "main": "public/index.php",
-  "scripts": {
-    "test": "make test"
-  },
+  "scripts": {},
   "author": "Tim Helfensdörfer <tim@visualappeal.de>",
   "license": "MIT",
   "dependencies": {
-    "bower": "~1.2.8",
-    "less": "~1.5.1",
-    "uglify-js": "~2.4.8"
+    "grunt": "0.4.*",
+    "grunt-chmod": "^1.0.3",
+    "grunt-contrib-less": "1.0.*",
+    "grunt-contrib-uglify": "0.7.*",
+    "grunt-shell": "^1.1.1"
   },
   "private": true
 }
