--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
+	"name": "visualappeal/ping",
+	"description": "Website uptime monitor.",
+	"keywords": ["ping", "uptime", "monitor"],
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
@@ -24,13 +24,13 @@
 		"post-install-cmd": [
 			"php artisan optimize",
 			"npm install",
-			"bower install"
+			"./node_modules/.bin/bower install"
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
 			"php artisan optimize",
 			"npm update",
-			"bower update"
+			"./node_modules/.bin/bower update"
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
