--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "grunt": "0.4.*",
-    "grunt-chmod": "^1.0.3",
+    "grunt-chmod": "1.0.*",
     "grunt-contrib-less": "1.0.*",
     "grunt-contrib-uglify": "0.7.*",
-    "grunt-shell": "^1.1.1"
+    "grunt-shell": "1.1.*",
+    "bower": "1.3.*"
   },
   "private": true
 }
